# ebook-to-yoto

./: .gitignore  PROGRESS.md  README.md  pyproject.toml  requirements-cloud.txt  requirements.txt  setup.sh
ebook_to_yoto/: __init__.py  cli.py  config.py  extractor.py  models.py  pipeline.py  postprocess.py  uploader.py  utils.py
ebook_to_yoto.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ebook_to_yoto/icons/: __init__.py  base.py  extractor.py  fallback.py  gemini.py  openai_img.py  pixelate.py  stable_diffusion.py
ebook_to_yoto/tts/: __init__.py  base.py  chatterbox.py  elevenlabs_tts.py  gemini_tts.py  kokoro.py  openai_tts.py
tests/: conftest.py  test_cli.py  test_config.py  test_extractor.py  test_icons.py  test_pixelate.py  test_postprocess.py  test_tts_kokoro.py
tests/fixtures/: make_fixtures.py  test_book.epub  test_book.txt
